# OverwatchLooker

./: .gitignore  README.md  debug_panel_structure.py  fix_events.py  main.py  mcp_heroes_schema_update.md  pyproject.toml  test_hero_switches.py  test_hero_tracking_e2e.py  test_subtitle_ocr.py  train_overnight.ps1  trim_replay.py  verify_recording.py
.claude/: settings.local.json
docs/: hero-panel-ocr.md  ocr-training-report.md  rank-screen-ocr.md  score-detection.md  training-ocr-models.md  websocket-protocol.md
everything_paddle/: export.py  init.ps1  pyproject.toml
everything_paddle/tools/: generate_rank_training.py  generate_side_training.py  generate_value_training.py  preprocess_recaug.py
overwatchlooker/: analyzer.py  audio_listener.py  cache.py  chat_listener.py  config.py  display.py  hero_panel.py  heroes.py  heroes.txt  hotkey.py  llm_analyzer.py  match_state.py  mcp_client.py  notification.py  ocr.py  ocr_analyzer.py  overwolf.py  rank_ocr.py  rank_screen.py  recording_uploader.py  screenshot.py  subtitle_listener.py  telegram.py  tick.py  tray.py  ws_server.py
overwatchlooker/analyzers/: __init__.py  anthropic.py  codex.py  common.py  ocr.py
overwatchlooker/models/panel_featured/: inference.pdiparams  inference.yml
overwatchlooker/models/panel_labels/: inference.json  inference.pdiparams  inference.yml
overwatchlooker/models/panel_values/: dict.txt  inference.json  inference.pdiparams
overwatchlooker/models/rank_division/: dict.txt  inference.json  inference.pdiparams  inference.yml
overwatchlooker/models/team_side/: dict.txt  inference.json  inference.pdiparams  inference.yml
overwatchlooker/recording/: __init__.py  export_mp4.py  recorder.py  replay.py
tests/: conftest.py  test_analyzers_live.py  test_cache.py  test_chat_listener.py  test_common.py  test_display.py  test_fallback_mode.py  test_heroes.py  test_llm_analyzer.py  test_match_integration.py  test_match_state.py  test_mcp_client.py  test_overwolf.py  test_overwolf_tick.py  test_recording_uploader.py  test_screenshot.py  test_subtitle_listener.py  test_tray.py  test_ws_server.py
tools/: README.md  crop_hero_sr.py  crop_rank_screen.py  detect_control_score.py  generate_delta_training.py  generate_featured_training.py  generate_label_training.py  generate_modifier_training.py  generate_training_data.py  generate_value_training.py  ocr_rank_video.py  ow2_finetune.yml  slice_scoreboard.py  upload_recording.py
