[project]
name = "overwatchlooker"
version = "0.1.0"
description = "Overwatch 2 screen analyzer using EasyOCR"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pynput>=1.8.1",
    "mss>=10.1.0",
    "pystray>=0.19.5",
    "Pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "opencv-contrib-python>=4.8.0",
    "anthropic>=0.83.0",
    "codex-open-client[pydantic]>=0.1.0",
    "litellm>=1.81.14",
    "pytesseract-api>=1.0.4",
    "websockets>=16.0",
    "mcp>=1.0.0",
    "onnxruntime>=1.17.0",
    "tuspy>=1.0.0",
    "memoir-capture>=0.1.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "screenshots: requires real screenshots in tests/fixtures",
    "live: calls real LLM APIs (opt-in, never runs by default)",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-timeout>=2.4.0",
    "types-pynput>=1.8.1.20250809",
]
